# UMR_Kuka_closed_loop

./: .gitignore  OldMain.py  Python_Publishing_Example.py  frames_2025-06-03_22.36.41.gv  test.py
Recording/: Recording_cam1.avi  Recording_cam2.avi  Recording_timestamps.csv
Stijn/: .gitignore  .gitmodules  main.py  recorder.py  utils.py
Stijn/src/kuka_interfaces/: package.xml
Stijn/src/kukavarproxy_ros/: setup.cfg  setup.py
Stijn/src/kukavarproxy_ros/config/: kuka_control.yaml
Stijn/src/kukavarproxy_ros/kukapythonvarproxy/: KRLVariable.py  KRL_Axis.py  KRL_Pos.py  RoboDkParameters.py  main.py
Stijn/src/kukavarproxy_ros/kukavarproxy_ros/: control_policy.py  csv_kuka.py  kuka_action.py  kuka_commander.py  kuka_control.py  (+1 more)
Stijn/src/maxon/: setup.cfg  setup.py
src/kuka_interfaces/: CMakeLists.txt
src/kuka_interfaces/msg/: KukaAction.msg  KukaPos.msg
src/kuka_interfaces/srv/: KukaReadVariable.srv
src/kuka_python_node/: package.xml  setup.cfg  setup.py
src/kuka_python_node/kuka_python_node/: kuka_commander.py  kuka_node.py
src/kukavarproxy_ros/: package.xml  setup.py
src/kukavarproxy_ros/kukapythonvarproxy/: .gitignore  KRL_Parameter.py  kukavarproxy.py  mock_kuka.py  setup.py
src/kukavarproxy_ros/kukavarproxy_ros/: kuka_control.py
src/kukavarproxy_ros/launch/: kuka_launch.py  kuka_maxon.py  stijn_launch.py
src/maxon/: package.xml
src/maxon/maxon/: motor.py
src/python/: recorder.py  recorder_functions.py  recorder_functions_right_handed.py  recorder_orientation.py  recorder_orientation_rightHanded.py  recorder_orientation_rightHandedV2.py
(+2 files in other folders)
